--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
   lefty {
     padding: 20px;
     text-align: left;
-    margin-left: 25px;
+    padding-left: 300px;
   }
   
   footer {
