--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,8 @@ body {
 
   Lefty {
     padding: 20px;
-    text-align: 40px;
-    padding-left: 300px;
+    text-align: center;
+    padding-left: 30px;
   }
   
   footer {
