--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 .flex-container {
   display: flex;
   flex-wrap: wrap;            /* Laat items naar de volgende rij gaan als er niet genoeg ruimte is */
-  flex-direction: row;        /* Plaats items horizontaal (standaard) */
+  flex-direction: column;        /* Plaats items horizontaal (standaard) */
   justify-content: space-around; /* Verspreid de items gelijkmatig over de container */
   align-items: flex-start;    /* Begin de items bovenaan uit te lijnen */
   height: 100vh;
