--- a/styles.css
+++ b/styles.css
@@ -49,20 +49,10 @@ body {
   justify-content: space-around; /* Verspreid de items gelijkmatig over de container */
   align-items: flex-start;    /* Begin de items bovenaan uit te lijnen */
   height: 100vh;
+  margin-left: 50px;
   background-color: #f0f0f0;
 }
 
-/* Flex-items */
-.flex-item {
-  background-color: #4CAF50;
-  padding: 20px;
-  margin: 10px;
-  color: white;
-  font-size: 24px;
-  text-align: center;
-  flex-basis: 30%;            /* Elk item neemt ongeveer 30% van de rij in beslag */
-  flex-grow: 1;               /* Laat items groeien om beschikbare ruimte te gebruiken */
-}
   
   footer {
     background-color: #333;
