--- a/styles.css
+++ b/styles.css
@@ -48,9 +48,9 @@ body {
   flex-direction: column;        /* Plaats items horizontaal (standaard) */
   justify-content: space-around; /* Verspreid de items gelijkmatig over de container */
   align-items: flex-start;    /* Begin de items bovenaan uit te lijnen */
-  height: 100vh;
-  margin-left: 50px;
-  background-color: #f0f0f0;
+  height: 10vh;
+  margin-left: 100px;
+  background-color: white;
 }
 
   
