--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,13 @@ body {
   }
   
   nav ul li a {
-    color: white;
+    color: rgba(140, 245, 166, 0.596);
     text-decoration: none;
     padding: 5px 10px;
   }
   
   nav ul li a:hover {
-    background-color: #575757;
+    background-color: #539137;
   }
   
   main {
@@ -56,7 +56,7 @@ body {
 
   
   footer {
-    background-color: #333;
+    background-color: #539137;;
     color: white;
     text-align: center;
     padding: 10px 0;
