--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
   }
   
   nav ul li a {
-    color: rgba(140, 245, 166, 0.596);
+    color: white;
     text-decoration: none;
     padding: 5px 10px;
   }
